# dioxus-hot-dog

./: Cargo.toml  README.md  dogs.txt
assets/: main.css  tailwind.css
src/: main.rs
